[package]
name = "mem_analyze"
version = "0.1.0"
authors = ["James Gowans <jgowans@amazon.com>"]
edition = "2018"

[dependencies]
ring = "0.14.6"
twox-hash = "1.2.0"
scan_fmt = "0.2.1"
sysinfo = "0.8.3"
byteorder = "1.3.1"
chrono = "0.4"
nix = "0.13"
log = "0.4"
simplelog = "0.5"
rusoto_core = "0.40"
rusoto_s3 = "0.40"
